@@ -1,3 +1,10 @@
+Fri Nov 10 20:26:01 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
+
+	* ace/Profile_Timer.cpp: Replaced ACE_OS::perror() with
+	  ACE_ERROR macros so that the output can be redirected to the
+ 	  same place that the ACE logging output is configured to go.
+  	  Thanks to Jeff Greif <jgreif@befree.com> for reportin this.
+	
 Fri Nov 10 17:15:42 2000  Darrell Brunsch  <brunsch@uci.edu>
 
         * bin/fuzz.pl:
